# windows-cli-tools

./: .gitattributes  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/cat/: Cargo.toml
crates/cat/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: cli.rs  encoding.rs  error.rs  lib.rs
crates/grep/: Cargo.toml
crates/grep/src/: main.rs
crates/head/: Cargo.toml
crates/head/src/: main.rs
crates/tac/: Cargo.toml
crates/tac/src/: main.rs
crates/tail/: Cargo.toml
crates/tail/src/: main.rs
crates/tee/: Cargo.toml
crates/tee/src/: main.rs
crates/tests-integration/: Cargo.toml
crates/tests-integration/tests/: cat.rs  grep.rs  head.rs  helpers.rs  tac.rs  tail.rs  tee.rs  touch.rs  wc.rs  which.rs  yes.rs
crates/tests-integration/tests/fixtures/: words.txt
crates/tests-integration/tests/fixtures/nested/: .hidden.txt  a.txt  b.txt
crates/touch/: Cargo.toml
crates/touch/src/: main.rs
crates/wc/: Cargo.toml
crates/wc/src/: main.rs
crates/which/: Cargo.toml
crates/which/src/: main.rs
crates/yes/: Cargo.toml
crates/yes/src/: main.rs
docs/: CONTRIBUTING.md  cat.md  design.md  grep.md  head.md  tac.md  tail.md  tee.md  touch.md  wc.md  which.md  yes.md
scripts/: pre-push
