[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
common = { path = "crates/common" }
lexopt = "0.3"
encoding_rs_io = "0.1"
regex-lite = "0.1"
tempfile = "3"
